{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 661,
  "lineage": "63d8635f-86d4-76ab-aaa4-85b7ec2f06b3",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "be_ec2_instance",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0ba4e76e4392ce9",
            "arn": "arn:aws:ec2:us-west-2:555628162711:instance/i-01752347025024779",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01752347025024779",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "acit_4640",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c9f1dc97329cc328",
            "private_dns": "ip-192-168-1-56.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.56",
            "public_dns": "ec2-34-214-154-61.us-west-2.compute.amazonaws.com",
            "public_ip": "34.214.154.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0752cf65ed25a993e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05d83e8d66438d0ed"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aed31e09184f9d59",
            "tags": {
              "Name": "a03_backend_server",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "a03_backend_server",
              "Project": "Assignment 3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d83e8d66438d0ed"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.sg.aws_security_group.be_sg",
            "module.vpc.aws_subnet.be_subnet",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_ec2_instance",
      "provider": "module.ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c0ba4e76e4392ce9",
            "arn": "arn:aws:ec2:us-west-2:555628162711:instance/i-008cac6c7adfbbc7b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008cac6c7adfbbc7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "acit_4640",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d1a46ecc237a94d",
            "private_dns": "ip-192-168-2-201.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.201",
            "public_dns": "ec2-54-186-198-58.us-west-2.compute.amazonaws.com",
            "public_ip": "54.186.198.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d84d28bf9adf0c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c07c567955136429"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0850cdaaca1212842",
            "tags": {
              "Name": "a03_web_server",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "a03_web_server",
              "Project": "Assignment 3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c07c567955136429"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "be_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group/sg-05d83e8d66438d0ed",
            "description": "Allow inbound traffic from BCIT and Home",
            "egress": [],
            "id": "sg-05d83e8d66438d0ed",
            "ingress": [],
            "name": "backend security group name",
            "name_prefix": "",
            "owner_id": "555628162711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend security group name",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "backend security group name",
              "Project": "Assignment 3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08407fd76bcd234b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_1_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group/sg-0998be65118839935",
            "description": "Allow 3306 traffic from subnet",
            "egress": [],
            "id": "sg-0998be65118839935",
            "ingress": [],
            "name": "Database security group name",
            "name_prefix": "",
            "owner_id": "555628162711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend security group name",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "backend security group name",
              "Project": "Assignment 3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08407fd76bcd234b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group/sg-0c07c567955136429",
            "description": "Allow inbound traffic from anywhere",
            "egress": [],
            "id": "sg-0c07c567955136429",
            "ingress": [],
            "name": "web security group name",
            "name_prefix": "",
            "owner_id": "555628162711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web security group name",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "web security group name",
              "Project": "Assignment 3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08407fd76bcd234b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "be_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_all_egress",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-0f2bbc5b3afacd842",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f2bbc5b3afacd842",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05d83e8d66438d0ed",
            "security_group_rule_id": "sgr-0f2bbc5b3afacd842",
            "tags": {
              "Name": "allow_all_egress",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "allow_all_egress",
              "Project": "Assignment 3"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.be_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_1_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "3306_to_backend_subnet",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-009250d05e6ed097e",
            "cidr_ipv4": "192.168.1.0/24",
            "cidr_ipv6": null,
            "description": "allow all egress traffic",
            "from_port": 3306,
            "id": "sgr-009250d05e6ed097e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0998be65118839935",
            "security_group_rule_id": "sgr-009250d05e6ed097e",
            "tags": {
              "Name": "3306_to_backend_subnet",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "3306_to_backend_subnet",
              "Project": "Assignment 3"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.db_1_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web_egress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "allow_all_egress",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-0025b9433c9e62212",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0025b9433c9e62212",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c07c567955136429",
            "security_group_rule_id": "sgr-0025b9433c9e62212",
            "tags": {
              "Name": "allow_all_egress",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "allow_all_egress",
              "Project": "Assignment 3"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "be_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_VPC_traffic",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-0be74a382e639a6ff",
            "cidr_ipv4": "192.168.0.0/16",
            "cidr_ipv6": null,
            "description": "all traffic from within VPC",
            "from_port": 0,
            "id": "sgr-0be74a382e639a6ff",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05d83e8d66438d0ed",
            "security_group_rule_id": "sgr-0be74a382e639a6ff",
            "tags": {
              "Name": "all_VPC_traffic",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "all_VPC_traffic",
              "Project": "Assignment 3"
            },
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.be_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        },
        {
          "index_key": "ssh_access_bcit",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-0becd86d2b302b864",
            "cidr_ipv4": "142.232.0.0/16",
            "cidr_ipv6": null,
            "description": "ssh access from bcit",
            "from_port": 22,
            "id": "sgr-0becd86d2b302b864",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05d83e8d66438d0ed",
            "security_group_rule_id": "sgr-0becd86d2b302b864",
            "tags": {
              "Name": "ssh_access_bcit",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "ssh_access_bcit",
              "Project": "Assignment 3"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.be_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        },
        {
          "index_key": "ssh_access_home",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-02ea446d1090a0486",
            "cidr_ipv4": "24.84.0.0/16",
            "cidr_ipv6": null,
            "description": "ssh access from home",
            "from_port": 22,
            "id": "sgr-02ea446d1090a0486",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05d83e8d66438d0ed",
            "security_group_rule_id": "sgr-02ea446d1090a0486",
            "tags": {
              "Name": "ssh_access_home",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "ssh_access_home",
              "Project": "Assignment 3"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.be_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_1_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "3306_from_backend_subnet",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-0f993f697e30b877f",
            "cidr_ipv4": "192.168.1.0/24",
            "cidr_ipv6": null,
            "description": "3306 access from subnet",
            "from_port": 3306,
            "id": "sgr-0f993f697e30b877f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0998be65118839935",
            "security_group_rule_id": "sgr-0f993f697e30b877f",
            "tags": {
              "Name": "3306_from_backend_subnet",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "3306_from_backend_subnet",
              "Project": "Assignment 3"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.db_1_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "443_access_anywhere",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-0be9218df361a61b4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "443/80 access from anywhere",
            "from_port": 443,
            "id": "sgr-0be9218df361a61b4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c07c567955136429",
            "security_group_rule_id": "sgr-0be9218df361a61b4",
            "tags": {
              "Name": "443_access_anywhere",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "443_access_anywhere",
              "Project": "Assignment 3"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        },
        {
          "index_key": "all_backend_subnet_traffic",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-0fa601acd7f042ad3",
            "cidr_ipv4": "192.168.1.0/24",
            "cidr_ipv6": null,
            "description": "all traffic from backend subnet",
            "from_port": 0,
            "id": "sgr-0fa601acd7f042ad3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c07c567955136429",
            "security_group_rule_id": "sgr-0fa601acd7f042ad3",
            "tags": {
              "Name": "all_backend_subnet_traffic",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "all_backend_subnet_traffic",
              "Project": "Assignment 3"
            },
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        },
        {
          "index_key": "ssh_access_bcit",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-03d88560c65e58089",
            "cidr_ipv4": "142.232.0.0/16",
            "cidr_ipv6": null,
            "description": "ssh access from bcit",
            "from_port": 22,
            "id": "sgr-03d88560c65e58089",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c07c567955136429",
            "security_group_rule_id": "sgr-03d88560c65e58089",
            "tags": {
              "Name": "ssh_access_bcit",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "ssh_access_bcit",
              "Project": "Assignment 3"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        },
        {
          "index_key": "ssh_access_home",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:security-group-rule/sgr-03fe988856702b294",
            "cidr_ipv4": "24.84.0.0/16",
            "cidr_ipv6": null,
            "description": "ssh access from home",
            "from_port": 22,
            "id": "sgr-03fe988856702b294",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c07c567955136429",
            "security_group_rule_id": "sgr-03fe988856702b294",
            "tags": {
              "Name": "ssh_access_home",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "ssh_access_home",
              "Project": "Assignment 3"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.web_sg",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:internet-gateway/igw-0a4fb0bc9ca45a2cf",
            "id": "igw-0a4fb0bc9ca45a2cf",
            "owner_id": "555628162711",
            "tags": {
              "Name": "A03 Internet Gateway",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "A03 Internet Gateway",
              "Project": "Assignment 3"
            },
            "vpc_id": "vpc-08407fd76bcd234b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:route-table/rtb-0837ae380ff63bd6a",
            "id": "rtb-0837ae380ff63bd6a",
            "owner_id": "555628162711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4fb0bc9ca45a2cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "A03 Route Table",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "A03 Route Table",
              "Project": "Assignment 3"
            },
            "timeouts": null,
            "vpc_id": "vpc-08407fd76bcd234b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "be_sg_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9ac819979f31514",
            "route_table_id": "rtb-0837ae380ff63bd6a",
            "subnet_id": "subnet-0aed31e09184f9d59"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.be_subnet",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_1_sg_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048aa26db753d8648",
            "route_table_id": "rtb-0837ae380ff63bd6a",
            "subnet_id": "subnet-0786169018cef0616"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.db_1_subnet",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_2_sg_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b32568ccb91097fb",
            "route_table_id": "rtb-0837ae380ff63bd6a",
            "subnet_id": "subnet-05c15d565eebb6209"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.db_2_subnet",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_sg_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c692dcf89f915da",
            "route_table_id": "rtb-0837ae380ff63bd6a",
            "subnet_id": "subnet-0850cdaaca1212842"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt",
            "module.vpc.aws_subnet.web_subnet",
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "be_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:subnet/subnet-0aed31e09184f9d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aed31e09184f9d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555628162711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "A03 Private Subnet",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "A03 Private Subnet",
              "Project": "Assignment 3"
            },
            "vpc_id": "vpc-08407fd76bcd234b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_1_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:subnet/subnet-0786169018cef0616",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0786169018cef0616",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555628162711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "A03 db 1 Subnet",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "A03 db 1 Subnet",
              "Project": "Assignment 3"
            },
            "vpc_id": "vpc-08407fd76bcd234b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_2_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:subnet/subnet-05c15d565eebb6209",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c15d565eebb6209",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555628162711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "A03 db 2 Subnet",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "A03 db 2 Subnet",
              "Project": "Assignment 3"
            },
            "vpc_id": "vpc-08407fd76bcd234b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:subnet/subnet-0850cdaaca1212842",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0850cdaaca1212842",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555628162711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "A03 Public Subnet",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "A03 Public Subnet",
              "Project": "Assignment 3"
            },
            "vpc_id": "vpc-08407fd76bcd234b4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.a03_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "a03_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:555628162711:vpc/vpc-08407fd76bcd234b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0f1ec5ace376d3146",
            "default_route_table_id": "rtb-09900a98f613ce16e",
            "default_security_group_id": "sg-03bc2da8f785167cc",
            "dhcp_options_id": "dopt-0b38257ff7cf3e40a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08407fd76bcd234b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09900a98f613ce16e",
            "owner_id": "555628162711",
            "tags": {
              "Name": "A03 VPC",
              "Project": "Assignment 3"
            },
            "tags_all": {
              "Name": "A03 VPC",
              "Project": "Assignment 3"
            }
          }
        }
      ]
    }
  ]
}